--- a/index.html
+++ b/index.html
@@ -10,14 +10,21 @@
         <link rel="stylesheet" href="css/app.css"/>        
     </head>
     <body>
-        <div class="my-app" ui-view></div>
+        <div class="my-app" ui-view></div>                         
         <script src="lib/jquery/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.5.0/lodash.js"></script>            
         <script src="lib/angular/angular.js"></script>        
         <script src="lib/angular/angular-resource.js"></script>
         <script src="lib/angular/angular-ui-router.js"></script>
-        <script src="lib/angular/angular-animate.js"></script>            
+        <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
+        <script src="lib/angular/angular-google-maps.min.js"></script>        
+        <script src="lib/angular/angular-animate.js"></script>                    
+        <script src="lib/angular-simple-logger.js"></script>            
+        
         <script src="js/app.js"></script>                
+        <script src="js/geoLocationFactory.js"></script> 
         <script src="js/route.js"></script>       
-        <script src="js/LandingCtrl.js"></script>       
+        <script src="js/LandingCtrl.js"></script>                     
+        <!--<script src="http://maps.googleapis.com/maps/api/js"></script>  -->
     </body>
 </html>
