--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="koding">
+<html lang="en" ng-app="doodly">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -20,11 +20,14 @@
         <script src="lib/angular/angular-google-maps.min.js"></script>        
         <script src="lib/angular/angular-animate.js"></script>                    
         <script src="lib/angular-simple-logger.js"></script>            
+        <script src="lib/polyline.js"></script>
         
         <script src="js/app.js"></script>                
         <script src="js/geoLocationFactory.js"></script> 
         <script src="js/route.js"></script>       
-        <script src="js/LandingCtrl.js"></script>                     
+        <script src="js/simulatorCtrl.js"></script>   
+        <script src="js/simulatorFactory.js"></script>
+        <script src="js/simulatorService.js"></script>                                            
         <!--<script src="http://maps.googleapis.com/maps/api/js"></script>  -->
     </body>
 </html>
