login service UI

--- a/ui/index.html
+++ b/ui/index.html
@@ -79,9 +79,10 @@
     <script src="js/app.js"></script>                
     <script src="js/geoLocationFactory.js"></script> 
     <script src="js/route.js"></script>
-    <script src="js/mainCtrl.js"></script>        
     <script src="js/simulatorCtrl.js"></script>   
     <script src="js/simulatorFactory.js"></script>
     <script src="js/simulatorService.js"></script>
+    <script src="js/doodlyService.js"></script>
+    <script src="js/mainCtrl.js"></script>
 </body>
 </html>
