--- a/ui/index.html
+++ b/ui/index.html
@@ -70,10 +70,11 @@
     <script src="lib/angular/angular.js"></script>        
     <script src="lib/angular/angular-resource.js"></script>
     <script src="lib/angular/angular-ui-router.js"></script>
-    <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
+    <script src='//maps.googleapis.com/maps/api/js?libraries=places&sensor=false'></script>
     <script src="lib/angular/angular-google-maps.min.js"></script>        
     <script src="lib/angular/angular-animate.js"></script>                    
     <script src="lib/angular-simple-logger.js"></script>            
+    <script src="lib/ui-bootstrap-tpls-0.11.0.js"></script>   
     <script src="lib/polyline.js"></script>
     
     <script src="js/app.js"></script>                
