--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,7 @@
 
 <body class="homepage" ng-controller="MainCtrl">
     <header id="header">
-        <div class="top-bar">
+        <!--<div class="top-bar">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-xs-4">
@@ -33,16 +33,16 @@
                                     <a href="#"><i class="fa " ng-class="socialMenu.class" ng-click="clickSocialMenu(socialMenu)"></i></a>&nbsp;
                                 </li>
                             </ul>
-                            <!-- <div class="search">
+                            <div class="search">
                                 <form role="form">
                                     <input type="text" class="search-form" autocomplete="off" placeholder="Search">
                                     <i class="fa fa-search"></i>
                                 </form>
-                           </div> -->
+                           </div> 
                        </div>
                     </div>
                 </div>
-            </div><!--/.container-->
+            </div>
         </div><!--/.top-bar-->
 
         <nav class="navbar navbar-inverse" role="banner">
