--- a/ui/index.html
+++ b/ui/index.html
@@ -20,7 +20,7 @@
 
 <body class="homepage" ng-controller="MainCtrl">
     <header id="header">
-        <div class="top-bar">
+        <!-- <div class="top-bar">
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-xs-4">
@@ -32,18 +32,18 @@
                                 <li ng-repeat="socialMenu in socialMenus">
                                     <a href="#"><i class="fa " ng-class="socialMenu.class" ng-click="clickSocialMenu(socialMenu)"></i></a>&nbsp;
                                 </li>
-                            </ul>
+                            </ul> -->
                             <!-- <div class="search">
                                 <form role="form">
                                     <input type="text" class="search-form" autocomplete="off" placeholder="Search">
                                     <i class="fa fa-search"></i>
                                 </form>
                            </div> -->
-                       </div>
+                       <!-- </div>
                     </div>
                 </div>
-            </div><!--/.container-->
-        </div><!--/.top-bar-->
+            </div> --> <!--/.container-->
+        <!--</div>--><!--/.top-bar-->
 
         <nav class="navbar navbar-inverse" role="banner">
             <div class="container">
