--- a/ui/index.html
+++ b/ui/index.html
@@ -20,11 +20,7 @@
 
 <body class="homepage" ng-controller="MainCtrl">
     <header id="header">
-<<<<<<< HEAD
-        <!-- <div class="top-bar">
-=======
         <!--<div class="top-bar">
->>>>>>> f82c7bf2a992417251891be1f7d6c9a7b8a1a592
             <div class="container">
                 <div class="row">
                     <div class="col-sm-6 col-xs-4">
@@ -36,32 +32,26 @@
                                 <li ng-repeat="socialMenu in socialMenus">
                                     <a href="#"><i class="fa " ng-class="socialMenu.class" ng-click="clickSocialMenu(socialMenu)"></i></a>&nbsp;
                                 </li>
-<<<<<<< HEAD
                             </ul> -->
                             <!-- <div class="search">
-=======
                             </ul>
                             <div class="search">
->>>>>>> f82c7bf2a992417251891be1f7d6c9a7b8a1a592
                                 <form role="form">
                                     <input type="text" class="search-form" autocomplete="off" placeholder="Search">
                                     <i class="fa fa-search"></i>
                                 </form>
-<<<<<<< HEAD
                            </div> -->
                        <!-- </div>
                     </div>
                 </div>
             </div> --> <!--/.container-->
         <!--</div>--><!--/.top-bar-->
-=======
-                           </div> 
+         <!--                  </div> 
                        </div>
                     </div>
                 </div>
             </div>
         </div><!--/.top-bar-->
->>>>>>> f82c7bf2a992417251891be1f7d6c9a7b8a1a592
 
         <nav class="navbar navbar-inverse" role="banner">
             <div class="container">
