--- a/ui/index.html
+++ b/ui/index.html
@@ -20,39 +20,6 @@
 
 <body class="homepage" ng-controller="MainCtrl">
     <header id="header">
-        <!--<div class="top-bar">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-6 col-xs-4">
-                        <div class="top-number"><p><i class="fa fa-phone-square"></i>  +911234567890</p></div>
-                    </div>
-                    <div class="col-sm-6 col-xs-8">
-                       <div class="social">
-                            <ul class="social-share">
-                                <li ng-repeat="socialMenu in socialMenus">
-                                    <a href="#"><i class="fa " ng-class="socialMenu.class" ng-click="clickSocialMenu(socialMenu)"></i></a>&nbsp;
-                                </li>
-                            </ul> -->
-                            <!-- <div class="search">
-                            </ul>
-                            <div class="search">
-                                <form role="form">
-                                    <input type="text" class="search-form" autocomplete="off" placeholder="Search">
-                                    <i class="fa fa-search"></i>
-                                </form>
-                           </div> -->
-                       <!-- </div>
-                    </div>
-                </div>
-            </div> --> <!--/.container-->
-        <!--</div>--><!--/.top-bar-->
-         <!--                  </div> 
-                       </div>
-                    </div>
-                </div>
-            </div>
-        </div><!--/.top-bar-->
-
         <nav class="navbar navbar-inverse" role="banner">
             <div class="container">
                 <div class="navbar-header">
@@ -68,7 +35,6 @@
                 </div>
             </div><!--/.container-->
         </nav><!--/nav-->
-        
     </header>
     <div class="my-app" ui-view></div>
 
@@ -93,5 +59,20 @@
     <script src="js/simulatorService.js"></script>
     <script src="js/doodlyService.js"></script>
     <script src="js/mainCtrl.js"></script>
+
+
 </body>
+<footer id="footer" class="midnight-blue">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-6">
+                &copy; 2016 <a target="_blank" title="Delivery expert">Doodly</a>. All Rights Reserved.
+            </div>
+            <div class="col-sm-6">
+                <ul class="pull-right">
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer><!--/#footer-->
 </html>
