user and doodly sign up on same page with different template

--- a/ui/index.html
+++ b/ui/index.html
@@ -37,7 +37,7 @@
         </nav><!--/nav-->
     </header>
     <div class="my-app" ui-view></div>
-    <footer id="footer" class="midnight-blue" ng-if="currentMenu.id != 'signupMenu'">
+    <!-- <footer id="footer" class="midnight-blue" ng-if="currentMenu.id != 'signupMenu'">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
@@ -46,7 +46,7 @@
                
             </div>
         </div>
-    </footer>
+    </footer> -->
     <script src="lib/jquery/jquery.min.js"></script>
     <script src="lib/bootstrap/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.5.0/lodash.js"></script>            
