click action for send package page

--- a/ui/index.html
+++ b/ui/index.html
@@ -34,6 +34,7 @@
                     </ul>
                 </div>
                 <div class="user-label" ng-if="isloggedIn">
+                    <img src="images/doodlynew.png" style="width: 19px;height: 19px;">
                     Peter
                 </div>
             </div><!--/.container-->
