--- a/ui/index.html
+++ b/ui/index.html
@@ -23,7 +23,7 @@
         <nav class="navbar navbar-inverse" role="banner">
             <div class="container">
                 <div class="navbar-header">
-                    <a class="navbar-brand"><img src="images/doodlyLogo.png" alt="logo"></a>
+                    <a class="navbar-brand"><img src="images/logo.png" alt="logo" style="width: 150px;"></a>
                 </div>
                 
                 <div class="collapse navbar-collapse navbar-right">
